Sun Jul 25 11:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/GSTextStorage.m: Modified ([-setAttributes:range:]) and
	([-replaceCharactersinRange:withString:]) to call
	([-edited:range:changeInLength:) on completion.
	* Source/NSTextStorage.m: likewise.

1999-07-24  Michael Hanni  <mhanni@sprintmail.com>

	* Headers/NSTextView.h: redid ivars.
	* Source/NSTextView.m: complete rewrite. more methods written.
	* Source/GSServicesManager.m: minor temp debug NSlog.
	* Source/NSMenuView.m: debug logs.
	* Source/NSText.m: debug logs.
	* Source/NSTextStorage.m: in processEditing: add code to notify
	every layoutManager of editing done in textStorage.
	Also fixed code to return the string. This makes debugging ohh so
	much easier. ;-)

	Look at core/Testing/gstextnetwork.app. That is the text
	application for NSTextView/TextNetwork. Edit.app has been
	modified to use NSText directly and not NSTextView.

1999-07-23  Adam Fedor  <fedor@gnu.org>

	* Model/GMAppKit.m: Added ifndef's to comment out areas of code
	that don't compile on OPENSTEP/MacOSX machines.
	* Model/GMArchiver.m: Likewise.
	* Model/IMConnectors.m (GSSetInstanceVariable): Dummy function
	on non-gstep-base machines.

Fri Jul 23 11:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gpbs.m: In ihandler() reset signal handler.

1999-07-22  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSMenuView.m: some fixes to get things to work correctly
	when calling menu item actions. Also autoenable should be working
	a little better.
	In setHighlightedItemIndex: if new item is disabled do not
	highlight or target action.
	* Source/NSMenuItemCell.m: drawing fixes for disabled cells.

1999-07-20  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSMenuView.m: trackEvent: fixed problems that existed for
	NSPopUpButton. Should now work as desired. However, I believe I
	need to once again rewrite NSPopUp to make proper use of